sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:11: error: ':' expected but ')' found.
def insertionSort(ecart) {
                       ^AlgShellSort:28: error: identifier expected but '}' found.
}
^